fix: footer dropdown menu alignment

--- a/wiki/public/scss/general.scss
+++ b/wiki/public/scss/general.scss
@@ -64,8 +64,10 @@
   }
 }
 
-.dropdown-menu.show {
-  top: 40px !important;
+.nav-item {
+  .dropdown-menu.show {
+    top: 40px !important;
+  }
 }
 
 .main-column {
